vcs/specs/parser/fail/types/ref_modifier_order.vr
// @test: parse-fail
// @level: L0
// @tags: parser, types, references, modifiers, order, error
// @description: Test detection of wrong modifier order (mut before checked)
// @expected-error: E018

// Correct order is: &checked mut T, not &mut checked T
fn test(x: &mut checked T) {}
